--- a/app/health/receptor-status/receptor-status.html
+++ b/app/health/receptor-status/receptor-status.html
@@ -20,7 +20,7 @@
                     <div class="receptor-graphic-svg" ng-include="'images/receptor.svg'"></div>
                     <h2 class="receptor-graphic-name">{{receptor.name}}{{receptor.lock.value? '*' : ''}}</h2>
                     <div style="" class="receptor-graphic-labels" layout="column">
-                        <span ng-class="{'stop-item': receptor.mode.value === 'STOP'}">{{receptor.windstow_active.value? '' : receptor.mode.value}}</span>
+                        <span ng-class="{'stop-item': receptor.mode.value === 'STOP', 'nominal-item': receptor.mode.value === 'POINT'}">{{receptor.windstow_active.value? '' : receptor.mode.value}}</span>
                         <span class="windstow-item">{{receptor.windstow_active.value? 'WINDSTOW' : ''}}</span>
                         <span class="inhibited-item">{{receptor.inhibited.value? 'INHIBITED' : ''}}</span>
                     </div>
@@ -70,12 +70,12 @@
                     </div>
                 </md-toolbar>
                 <div ng-show="vm.showGraphics">
-                    <div ng-repeat="receptor in vm.receptorsData" class="md-whiteframe-z1" style="display: -webkit-inline-box; position: relative; margin: 2px;"
+                    <div ng-repeat="receptor in vm.receptorsData | filter:{subarray:subarray.id} track by $index"" class="md-whiteframe-z1" style="display: -webkit-inline-box; position: relative; margin: 2px;"
                         ng-class="{'receptor-graphic-sensors-nominal': receptor.sensors_ok.status === 'nominal', 'receptor-graphic-sensors-error': receptor.sensors_ok.status === 'error', 'receptor-graphic-stow': receptor.mode.value === 'STOW', 'receptor-graphic-stop': receptor.mode.value === 'STOP'}">
                         <div class="receptor-graphic-svg" ng-include="'images/receptor.svg'"></div>
                         <h2 class="receptor-graphic-name">{{receptor.name}}{{receptor.lock.value? '*' : ''}}</h2>
                         <div style="" class="receptor-graphic-labels" layout="column">
-                            <span ng-class="{'stop-item': receptor.mode.value === 'STOP'}">{{receptor.windstow_active.value? '' : receptor.mode.value}}</span>
+                            <span ng-class="{'stop-item': receptor.mode.value === 'STOP', 'nominal-item': receptor.mode.value === 'POINT'}">{{receptor.windstow_active.value? '' : receptor.mode.value}}</span>
                             <span class="windstow-item">{{receptor.windstow_active.value? 'WINDSTOW' : ''}}</span>
                             <span class="inhibited-item">{{receptor.inhibited.value? 'INHIBITED' : ''}}</span>
                         </div>
