force directed layout for receptor health; first attempt at force directed subarray health

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <script src="bower_components/jsjws/jws-3.0.js"></script>
 <script src="bower_components/jsjws/ext/json-sans-eval-min.js"></script>
 <script src="bower_components/jsrsasign/jsrsasign-4.7.0-all-min.js"></script>
-<script src="bower_components/d3/d3.min.js"></script>
+<script src="bower_components/d3/d3.js"></script>
 <script src="bower_components/jspdf/dist/jspdf.min.js"></script>
 <script src="bower_components/html2canvas/build/html2canvas.js"></script>
 <script src="bower_components/jspdf-autotable/jspdf.plugin.autotable.js"></script>
@@ -75,8 +75,10 @@
 <script src="app/d3/receptor-health-pack-map.js"></script>
 <script src="app/d3/receptor-health-partition-map.js"></script>
 <script src="app/d3/receptor-health-icicle-map.js"></script>
+<script src="app/d3/receptor-health-force.js"></script>
 <script src="app/d3/receptor-health-sunburst-map.js"></script>
 <script src="app/d3/status-single-level-tree-map.js"></script>
+<script src="app/d3/subarray-health-map.js"></script>
 <script src="app/d3/navigation-pie.js"></script>
 
 <script src="app/app.js"></script>
@@ -92,6 +94,7 @@
 <script src="app/health/receptor-status/receptor-status.js"></script>
 <script src="app/health/receptor-pointing/receptor-pointing.js"></script>
 <script src="app/health/custom-health/custom-health.js"></script>
+<script src="app/health/subarray-health/subarray-health.js"></script>
 <script src="app/sensor-graph/sensor-graph.js"></script>
 <script src="app/sensor-list/sensor-list.js"></script>
 <script src="app/admin/admin.js"></script>
