--- a/app/cam-components/cam-components.html
+++ b/app/cam-components/cam-components.html
@@ -98,7 +98,7 @@
                     </md-switch>
                     <md-menu style="padding: 0">
                         <md-button class="md-icon-button" ng-click="$mdOpenMenu(); $event.stopPropagation()"
-                            style="height: 32px; width: 32px; line-height: 42px; margin: 0">
+                            style="height: 32px; width: 32px; margin: 0">
                             <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
                         </md-button>
                         <md-menu-content width="4" style="padding-left: 16px; padding-right: 16px;">
