--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -17,7 +17,7 @@
                            title="Acknowledge Selected Alarms">Acknowledge</md-button>
                 <md-button ng-disabled="!vm.canOperateAlarms" ng-click="vm.clearSelectedAlarms()"class="md-primary md-raised"
                            title="Clear Selected Alarms">Clear</md-button>
-                <md-checkbox style="font-size: 12px;" class="md-primary" ng-model="vm.showClearedAlarms">Show Cleared Alarms
+                <md-checkbox class="md-primary" ng-model="vm.showClearedAlarms">Show Cleared Alarms
                 </md-checkbox>
                 <md-menu style="padding: 0">
                     <md-button class="md-icon-button inline-action-button" style="margin: 0 4px" ng-click="$mdOpenMenu()">
