removed all traces of ap_ sensors from katgui and use proper pos_ sensors for pointing displays

--- a/app/health/receptor-pointing/receptor-pointing.html
+++ b/app/health/receptor-pointing/receptor-pointing.html
@@ -105,8 +105,8 @@
          style="top: 120px; left: 8px; min-width: 268px"
          layout="column" layout-align="start">
         <span ng-if="vm.receptorHoverName.length > 0" class="{{vm.receptorHoverName+ '_actual'}}" style="width: 100%; text-align: center"><b>{{vm.receptorHoverName}}</b></span>
-        <span>azim: <b>{{vm.sensorValues[vm.receptorHoverName + '_ap_actual_azim'].value | number:2}}</b>, elev: <b>{{vm.sensorValues[vm.receptorHoverName + '_ap_actual_elev'].value | number:2}}</b></span>
-        <span>azim: <b>{{vm.sensorValues[vm.receptorHoverName + '_ap_requested_azim'].value | number:2}}</b>, elev: <b>{{vm.sensorValues[vm.receptorHoverName + '_ap_requested_elev'].value | number:2}}</b> (requested)</span>
+        <span>azim: <b>{{vm.sensorValues[vm.receptorHoverName + '_pos_actual_pointm_azim'].value | number:2}}</b>, elev: <b>{{vm.sensorValues[vm.receptorHoverName + '_pos_actual_pointm_elev'].value | number:2}}</b></span>
+        <span>azim: <b>{{vm.sensorValues[vm.receptorHoverName + '_requested_azim'].value | number:2}}</b>, elev: <b>{{vm.sensorValues[vm.receptorHoverName + '_requested_elev'].value | number:2}}</b> (requested)</span>
         <span>ra: <b>{{vm.sensorValues[vm.receptorHoverName + '_pos_request_base_ra'].value | number:2}}</b>, dec: <b>{{vm.sensorValues[vm.receptorHoverName + '_pos_request_base_dec'].value | number:2}}</b> (requested)</span>
         <span>Delta sky: <b>{{vm.sensorValues[vm.receptorHoverName + '_pos_delta_sky'].value | number:2}}</b></span>
         <span>Delta azim: <b>{{vm.sensorValues[vm.receptorHoverName + '_pos_delta_azim'].value | number:2}}</b>, Delta elev: <b>{{vm.sensorValues[vm.receptorHoverName + '_pos_delta_elev'].value | number:2}}</b></span>
