--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -176,7 +176,7 @@
                  class="md-toolbar-tools-medium">
                 <md-chips flex class="custom-chips"
                     md-on-remove="vm.chipRemoved($chip)"
-                    md-on-append="vm.chipAppended($chip)"
+                    md-on-add="vm.chipAppended($chip)"
                     md-require-match
                     ng-model="vm.sensorNames"
                     delete-button-label="Remove"
