(francois, lize) added CAM DOCS link to navigation widget and sidebar nav

--- a/index.html
+++ b/index.html
@@ -245,6 +245,11 @@
                     </md-item-content>
                 </md-item>
                 <md-item>
+                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="$root.openUrlInNewTab('https://drive.google.com/drive/folders/0B8fhAW5QnZQWVkdXYm1GTnZ2X1k')">
+                        <md-button flex><span class="fa fa-google"></span><span>CAM Documentation</span></md-button>
+                    </md-item-content>
+                </md-item>
+                <md-item>
                     <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.openIRCDisplay($event)">
                         <md-button flex><span class="fa"></span><span>#IRC</span></md-button>
                     </md-item-content>
